add burger menu

--- a/students/linov_mykhailo/20_responsive-nav-2/src/css/_global.scss
+++ b/students/linov_mykhailo/20_responsive-nav-2/src/css/_global.scss
@@ -54,3 +54,15 @@ a {
 .regular-p {
     margin: 0;
 }
+
+.mobile-only {
+    @include media(sm) {
+        display: none;
+    }
+}
+
+.desktop-only {
+    @include media(sm) {
+        display: none !important;
+    }
+}
