--- a/students/linov_mykhailo/20_responsive-nav-2/src/css/header/_buttons.scss
+++ b/students/linov_mykhailo/20_responsive-nav-2/src/css/header/_buttons.scss
@@ -11,6 +11,12 @@
         gap: 32px;
         white-space: nowrap;
     }
+
+    @include media(sm) {
+        position: fixed;
+        top: 60px;
+        left: 25%;
+    }
 }
 
 .white-button,
