--- a/students/linov_mykhailo/20_responsive-nav-2/src/css/header/_menu.scss
+++ b/students/linov_mykhailo/20_responsive-nav-2/src/css/header/_menu.scss
@@ -6,7 +6,7 @@
 
         @extend %ul-not-marker;
 
-        @include media(md) {
+        @include media(sm) {
             position: fixed;
             width: 100%;
             top: 107px;
@@ -14,11 +14,11 @@
             display: block;
             text-align: center;
             background-color: white;
-            transform: translateX(-100%);
+            transform: translateX(-105%);
             transition: transform .3s ease-in-out;
 
             .menu-open-input:checked~& {
-                transform: translateX(0);
+                transform: translateX(-5%);
             }
         }
     }
@@ -26,7 +26,7 @@
 
 .menu {
     &__item {
-        @include media(md) {
+        @include media(sm) {
             &:first-child {
                 border-top: $default-border;
             }
@@ -37,7 +37,7 @@
         }
     }
 
-    &__item>a:hover {
+    &__item>:hover {
         color: $color-orange;
     }
 
@@ -48,57 +48,61 @@
 }
 
 .menu-open-label {
-    width: 50px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 6px;
-    border: $default-border;
+    @include media(sm) {
+        width: 50px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 6px;
+        border: $default-border;
 
-    .menu-open-input:checked+& {
-        .menu-open-label__line {
-            background-color: transparent;
+        .menu-open-input:checked+& {
+            .menu-open-label__line {
+                background-color: transparent;
+
+                &::before {
+                    top: 0;
+                    transform: rotate(45deg);
+                }
+
+                &::after {
+                    bottom: 0;
+                    transform: rotate(-45deg);
+                }
+            }
+        }
+
+        &__line {
+            position: relative;
+            display: block;
+            width: 70%;
+            background-color: $color-orange;
+            height: 4px;
+            border-radius: 4px;
+            border-color: $color-placeholder;
+            transition: background-color .3s ease-in-out;
+
+            &::before,
+            &::after {
+                content: "";
+                display: block;
+                width: 100%;
+                height: 100%;
+                background-color: $color-orange;
+                border-radius: inherit;
+                position: absolute;
+                transition: all .3s ease-in-out;
+            }
 
             &::before {
-                top: 0;
-                transform: rotate(45deg);
+                top: -11px;
             }
 
             &::after {
-                bottom: 0;
-                transform: rotate(-45deg);
+                bottom: -11px;
             }
         }
     }
 
-    &__line {
-        position: relative;
-        display: block;
-        width: 70%;
-        background-color: $color-orange;
-        height: 4px;
-        border-radius: 4px;
-        border-color: $color-placeholder;
-
-        &::before,
-        &::after {
-            content: "";
-            display: block;
-            width: 100%;
-            height: 100%;
-            background-color: $color-orange;
-            border-radius: inherit;
-            position: absolute;
-            transition: transform .3s ease-in-out;
-        }
-
-        &::before {
-            top: -11px;
-        }
-
-        &::after {
-            bottom: -11px;
-        }
-    }
 }
