--- a/students/motkaliuk_andrii/20_css_animation/src/css/_variables.scss
+++ b/students/motkaliuk_andrii/20_css_animation/src/css/_variables.scss
@@ -3,6 +3,10 @@ $white-color: #FFF;
 $gray-color: #544837;
 $blue-color: #BCD0E5;
 $black-color: #2F281E;
+$gray-light: lightgrey;
+
+$border-color: $gray-light;
+$default-border: 1px solid $gray-light;
 
 $default-body-color: $white-color;
 
