--- a/students/motkaliuk_andrii/20_css_animation/src/css/styles.scss
+++ b/students/motkaliuk_andrii/20_css_animation/src/css/styles.scss
@@ -1,6 +1,7 @@
 @use 'sass:math';
 @import './reset';
 @import "./variables";
+@import "./extend";
 @import "./mixins";
 @import "./global";
 @import "./header/header";
