--- a/students/dunaieva_alona/11_flexbox/css/style.css
+++ b/students/dunaieva_alona/11_flexbox/css/style.css
@@ -50,6 +50,7 @@ li {
 
 li>a {
     text-decoration: none;
+    color: inherit;
 }
 
 li>a:hover {
@@ -57,89 +58,81 @@ li>a:hover {
 }
 
 .container {
-    max-width: 1200px;
+    max-width: 1230px;
     margin: 0 auto;
     box-sizing: border-box;
+    padding: 0 15px;
 }
 
 .row {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     margin-bottom: 100px;
 }
 
-.header .row {
-    margin-bottom: 70px;
-    font-size: 0;
-    gap: 192px;
-    padding: 17px 0;
+.col-3 {
+    width: calc(100% / 3);
 }
 
 .col-4 {
-    padding-top: 11px;
+    width: calc(100% / 4);
 }
 
-.logo {
-    min-width: 200px;
-    min-height: 32px;
-    font-size: 0;
+.col-6 {
+    width: 50%;
+}
+.header {
+    margin: 9px 0;
 }
 
-.logo__image {
-    padding-right: 12px;
-}
-
-.nav .menu {
+.menu {
     display: flex;
     justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 17px 0;
 }
 
-nav .menu__item>a {
-    padding: 0 10px;
-    color: #2F281E;
-    font-size: 16px;
-    line-height: 28px;
-    font-weight: normal;
-}
-
-nav .menu__item>a:hover {
-    color: #f90;
+.action {
+    display: flex;
+    justify-content: end;
+    gap: 32px;
 }
 
 .btn {
     font-family: Poppins, Arial, Helvetica, sans-serif;
     font-size: 16px;
-    min-width: 180px;
-    min-height: 50px;
-    border: none;
+    border: 1px solid transparent;
     border-radius: 4px;
     cursor: pointer;
     font-weight: 600;
     transition: 0.3s ease;
+    text-decoration: none;
+    padding: 13px 40px;
+    display: inline-block;
 }
 
-.header .btn {
-    min-height: 46px;
-    min-width: 110px;
+.btn-small {
+    padding: 13px 25px;
     font-family: Montserrat, Arial, Helvetica, sans-serif;
     font-weight: 600;
 }
 
 .btn-primary {
     background-color: #f90;
+    border: 1px solid transparent;
+    color: #fff
 }
 
 .btn-primary:hover {
     background-color: rgba(255, 153, 0, 0.6);
 }
 
-.btn-primary span {
-    color: #fff;
-}
-
 .btn-secondary {
     border: 1px solid #BCD0E5;
     background-color: #fff;
-    margin-right: 32px;
+    color: inherit;
 }
 
 .btn-secondary:hover {
@@ -147,18 +140,8 @@ nav .menu__item>a:hover {
     color: #fff;
 }
 
-.hero-block .row {
-    gap: 56px;
-}
-
-.hero-block .col-6:first-of-type {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.hero {
-    max-width: 500px;
+.hero .row {
+    gap: 66px;
 }
 
 .hero__text {
@@ -167,8 +150,15 @@ nav .menu__item>a:hover {
     padding-bottom: 30px;
 }
 
+.tools .row {
+    gap: 55px;
+    padding-bottom: 74px;
+}
+
 .tools {
-    background: url('../images/bg.svg') no-repeat bottom;
+    background: url('../images/bg.svg') center bottom;
+    background-size: cover;
+    margin-bottom: 70px;
 }
 
 .tools__title {
@@ -179,52 +169,31 @@ nav .menu__item>a:hover {
     padding-bottom: 31px;
 }
 
-.tools .row {
-    gap: 55px;
-}
-
-.tools .col-3 {
-    width: calc(100% / 3);
-    min-height: 52px;
-}
-
 .tools__image {
     padding-bottom: 30px;
 }
 
-.start {
+.tools__action {
+    display: flex;
+    justify-content: center;
     padding-bottom: 74px;
 }
 
-.start .btn-primary {
-    display: block;
-    margin: 0 auto;
+.footer .row{
+    align-items: flex-start;
 }
 
-.footer {
-    margin-top: 70px;
-}
-
-.footer .col-3 {
-    width: calc(100% / 3);
-}
-
-.footer .menu__item {
+.footer__items {
     display: flex;
     flex-direction: column;
     gap: 15px;
 }
 
-.footer a {
-    color: inherit;
+.form__link-wrapper {
+    margin-top: 25px;
 }
 
 .form__input {
-    width: 320px;
-    padding-bottom: 25px;
-}
-
-.form__input input {
     width: 100%;
     height: 50px;
     border: 1px solid #BCD0E5;
