--- a/students/dunaieva_alona/12_position/css/style.css
+++ b/students/dunaieva_alona/12_position/css/style.css
@@ -56,6 +56,20 @@ li>a:hover {
     color: rgba(0, 0, 0, 0.8);
 }
 
+.row {
+    display: flex;
+    gap: 30px;
+}
+
+.col-4 {
+    min-width: 385px;
+    width: calc(100% / 4);
+}
+
+.col-8 {
+    width: auto;
+}
+
 .container {
     max-width: 1200px;
     margin: 0 auto;
@@ -67,21 +81,22 @@ li>a:hover {
     padding-bottom: 13px;
 }
 
-.nav,
-.menu {
+.nav {
     display: flex;
     align-items: center;
 }
 
-.menu {
-    gap: 10px;
-}
-
-.menu__item>a {
+.breadcrumbs__link {
     font-family: Staatliches, Arial, Helvetica, sans-serif;
     font-size: 22px;
     letter-spacing: 0.66;
+    color: inherit;
+    text-decoration: none;
 }
+
+.breadcrumbs__link:hover {
+    color: rgba(0, 0, 0, 0.8);
+} 
 
 .lang {
     padding-right: 50px;
@@ -100,16 +115,7 @@ li>a:hover {
     padding-top: 70px;
     padding-bottom: 90px;
     position: relative;
-    background: url(../images/bg.svg) no-repeat right 294px top 150px fixed
-}
-
-.row {
-    display: flex;
-    gap: 30px;
-}
-
-.col-4 {
-    min-width: 385px;
+    background: url(../images/bg.svg) no-repeat right 294px top 150px fixed;
 }
 
 .main-menu {
@@ -127,7 +133,7 @@ li>a:hover {
 }
 
 .main-menu__item,
-.col-8 h2 {
+ h2 {
     font-family: Francois One, Arial, Helvetica, sans-serif;
     font-size: 35px;
     line-height: 48px;
@@ -135,10 +141,11 @@ li>a:hover {
     text-transform: uppercase;
 }
 
-.col-8 {
+.bloks-wrapper {
     display: flex;
     flex-direction: column;
     gap: 70px;
+    width: auto;
 }
 
 [class*=block] {
