--- a/students/dunaieva_alona/13_preprocessor/src/css/sections/_our-team.scss
+++ b/students/dunaieva_alona/13_preprocessor/src/css/sections/_our-team.scss
@@ -1,9 +1,30 @@
+.sub-title {
+    font-family: $main-font;
+    font-size: 18px;
+    text-transform: uppercase;
+    font-weight: 500;
+    line-height: 24px;
+    color: $color-sub-text;
+    padding-bottom: 15px;
+    text-align: center;
+}
+
+.block {
+    align-items: center;
+}
+
 .wrapper {
     border: 1px solid $color-gold;
-    position: absolute;
+    position: relative;
     z-index: -2;
+    padding: 15px;
+
     &__image {
-        padding: 15px
+        border: $default-border-color;
+        display: block;
+        position: relative;
+        z-index: 1;
+
     }
 }
 
@@ -35,11 +56,13 @@
     gap: 30px;
     text-align: center;
     padding: 11px 0 70px;
+
     &_icon {
         display: flex;
         justify-content: center;
         gap: 5px;
     }
+
     &__parg {
         font-family: $default-font-name;
         font-size: 14px;
@@ -48,8 +71,10 @@
         color: $color-text;
         position: relative;
         padding-bottom: 20px;
-        max-width: 430px;
+        width: 85%;
+        margin: auto;
     }
+
     &__parg::after {
         content: '';
         background: url(../images/dotted_line.svg);
@@ -59,24 +84,31 @@
         left: 45%;
         bottom: 0;
     }
-    &__btn {
-        border: 1px solid $color-gold;
-        background-color: $color-bg;
-        padding: 5px 10px;
-        width: fit-content;
-        margin: 0 auto;
-        >span {
-            font-family: $btn-font;
-            color: $default-text-color;
-            text-transform: uppercase;
-            font-size: 14px;
-            font-weight: 700;
-            line-height: 14px;
-        }
-    }
-    &__btn:hover {
+}
+
+.btn {
+    border: $default-border-color;
+    background-color: $color-bg;
+    padding: 5px 10px;
+    width: fit-content;
+    margin: 0 auto;
+
+    &:hover {
         background-color: $color-gold;
         opacity: 0.7;
         transition: 0.3s ease-in;
+
     }
+
+    &__link {
+        font-family: $btn-font;
+        text-decoration: none;
+        color: $default-text-color;
+        text-transform: uppercase;
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 14px;
+
+    }
+
 }
