edited fonts.scss file and move README.md file

--- a/students/dunaieva_alona/14_mixins-extend/src/css/style.scss
+++ b/students/dunaieva_alona/14_mixins-extend/src/css/style.scss
@@ -2,6 +2,7 @@
 @import "reset";
 @import "variables";
 @import "mixins";
+@import "fonts";
 @import "global";
 @import "extend";
 @import "header";
