--- a/students/motkaliuk_andrii/11_flexbox_bootstrap/css/styles.css
+++ b/students/motkaliuk_andrii/11_flexbox_bootstrap/css/styles.css
@@ -89,9 +89,12 @@ body {
 
 /* The design container */
 .design {
-    display: flex;
     padding-top: 20px;
     padding-bottom: 100px;
+}
+
+.design-container {
+    display: flex;
 }
 
 .design_item1 {
