--- a/students/kukuruza_maxim/15_form/src/css/_variables.scss
+++ b/students/kukuruza_maxim/15_form/src/css/_variables.scss
@@ -1,5 +1,6 @@
 // colors
 $white: #fff;
+$gray: gray;
 $black: #2F281E;
 $dark-brown: #544837;
 // fonts
@@ -17,6 +18,8 @@ $secondary-fonts-size: 18px;
 // containers
 $container-padding: 15px;
 $container-max-width: 1200px;
+
+$form-width: 500px;
 
 $gap: 15px;
 $defaulp-count-col: 12;
