--- a/students/linov_mykhailo/21_adaptive-graphics/src/css/header/_header.scss
+++ b/students/linov_mykhailo/21_adaptive-graphics/src/css/header/_header.scss
@@ -1,5 +1,3 @@
-@import "./menu";
-
 .header {
     &__container {
         display: flex;
@@ -11,5 +9,6 @@
         line-height: 150%;
         letter-spacing: 8px;
         margin: 38px 0px;
+        color: $title-color;
     }
 }
