fill html and add styles

--- a/students/linov_mykhailo/21_adaptive-graphics/src/css/_mixins.scss
+++ b/students/linov_mykhailo/21_adaptive-graphics/src/css/_mixins.scss
@@ -86,6 +86,10 @@
         max-width: $default-width;
         margin: 0 auto;
         padding: 0 $gap;
+
+        @include media(sm) {
+            padding: 0 $gap-mobile;
+        }
     }
 }
 
