--- a/students/linov_mykhailo/21_adaptive-graphics/src/css/_variables.scss
+++ b/students/linov_mykhailo/21_adaptive-graphics/src/css/_variables.scss
@@ -10,6 +10,7 @@ $green-color: green;
 $periwinkle-gray: #BCD0E5;
 $black-color: #000;
 $grey-color: #565656;
+$footer-grey: #F4F4F4;
 
 $title-color: $black-color;
 $text-color: $grey-color;
@@ -19,8 +20,8 @@ $border-btn-color-secondary: $periwinkle-gray;
 $border-height: 50px;
 $btn-font-weight: 600;
 
-$border-color: $grey-light;
-$default-border: 1px solid $grey-light;
+$border-color: $grey-color;
+$default-border: 1px solid $grey-color;
 
 $default-body-color: $white-color;
 $default-font-color: $text-color;
@@ -41,9 +42,10 @@ $container-padding: 15px;
 $container-max-width: 1170px;
 
 $gap: 15px;
+$gap-mobile: 10px;
 $default-count-col: 12;
 
-$default-width: 1200px;
+$default-width: 1170px;
 
 $breack-points: (
     "lg": 1200px,
