added styles to article

--- a/students/hridina_anastasiia/21_adaptive_graphics/src/css/_fonts.scss
+++ b/students/hridina_anastasiia/21_adaptive_graphics/src/css/_fonts.scss
@@ -1,2 +1,3 @@
-@include font-face('roboto-v30-latin-regular');
-@include font-face('roboto-v30-latin-regular', $_font-style: italic);
+@include font-face('lato-v24-latin-regular', $_font-weight: 400, $_font-style: normal, $_font-family: $default-font-name);
+@include font-face('red-hat-display-v14-latin-600', $_font-weight: 600, $_font-style: normal, $_font-family: $title-font-name);
+@include font-face('red-hat-display-v14-latin-regular', $_font-weight: 400, $_font-style: normal, $_font-family: $title-font-name);
