--- a/students/hridina_anastasiia/21_adaptive_graphics/src/css/_form.scss
+++ b/students/hridina_anastasiia/21_adaptive_graphics/src/css/_form.scss
@@ -21,13 +21,13 @@
     }
 
     &-primary {
-        border-color: $border-btn-color-primary;
-        background-color: $orang-color;
-        color: $white-color;
+        // border-color: $border-btn-color-primary;
+        // background-color: $orang-color;
+        // color: $white-color;
     }
 
     &-secondary {
-        border-color: $border-btn-color-secondary;
-        color: #2F281E;
+        // border-color: $border-btn-color-secondary;
+        // color: #2F281E;
     }
 }
