--- a/students/hridina_anastasiia/21_adaptive_graphics/src/css/style.scss
+++ b/students/hridina_anastasiia/21_adaptive_graphics/src/css/style.scss
@@ -6,5 +6,5 @@
 @import "./reset";
 @import "./global";
 @import "./form";
-@import "./header/header";
-@import './blog';
+@import './article';
+@import './footer';
