--- a/students/hridina_anastasiia/21_adaptive_graphics/src/css/_variables.scss
+++ b/students/hridina_anastasiia/21_adaptive_graphics/src/css/_variables.scss
@@ -1,35 +1,26 @@
 // colors
-$orang-color: #f76707;
-$white-color: #fff;
-$gray-3-color: #dee2e6;
-$gray-6-color: #868e96;
-$grey-7-color: #495057;
-$gray-8-color: #343a40;
-$grey-light: lightgray;
-$green-color: green;
-$periwinkle-gray: #BCD0E5;
+$color-black: #000000;
+$color-white: #FFFFFF;
+$color-grey: #565656;
+$color-lightgrey: #F4F4F4;
 
-$border-btn-color-primary: $orang-color;
-$border-btn-color-secondary: $periwinkle-gray;
+$default-body-color: $color-white;
+
 $border-height: 50px;
 $btn-font-weight: 600;
 
-$border-color: $grey-light;
-$default-border: 1px solid $grey-light;
-
-$default-body-color: $white-color;
-
 // fonts
-$default-font-name: 'Roboto';
+$default-font-name: 'Lato';
 $fallback: Arial, Helvetica, sans-serif;
-$default-font-size: 18px;
+$default-font-size: 19px;
+$title-font-name: 'Red Hat Display';
 
 $main-font: $default-font-name, $fallback;
 $font-path: './fonts/';
 
 // containers
 $container-padding: 15px;
-$container-max-width: 1200px;
+$container-max-width: 1170px;
 
 $gap: 15px;
 $default-count-col: 12;
