--- a/students/linov_mykhailo/21_adaptive-graphics/src/css/_extend.scss
+++ b/students/linov_mykhailo/21_adaptive-graphics/src/css/_extend.scss
@@ -16,3 +16,9 @@
     padding: 0;
     list-style-type: none;
 }
+
+%flex-jcc-aic {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
