--- a/students/linov_mykhailo/21_adaptive-graphics/src/css/_variables.scss
+++ b/students/linov_mykhailo/21_adaptive-graphics/src/css/_variables.scss
@@ -1,6 +1,6 @@
 // colors
 $orang-color: #f76707;
-$white-color: #fff;
+$white-color: #FFF;
 $gray-3-color: #dee2e6;
 $gray-6-color: #868e96;
 $grey-7-color: #495057;
@@ -46,6 +46,10 @@ $gap-mobile: 10px;
 $default-count-col: 12;
 
 $default-width: 1170px;
+
+$icon-width: 30px;
+$icon-height: $icon-width;
+$icon-padding: 10px;
 
 $breack-points: (
     "lg": 1200px,
