--- a/students/umienchuk_oksana/exams_first/src/css/_mixins.scss
+++ b/students/umienchuk_oksana/exams_first/src/css/_mixins.scss
@@ -10,8 +10,9 @@
     flex-wrap: $_flex-wrap;
 }
 
-@mixin font-face($_font-name, $_font-weight: 400, $_font-style: normal, $_font-family: $default-font-name) {
+@mixin font-face ($_font-name, $_font-weight: 300, $_font-family: $default-font-name, $_font-style: normal) {
     @font-face {
+        font-display: swap;
         font-family: $_font-family;
         font-style: $_font-style;
         font-weight: $_font-weight;
