--- a/students/umienchuk_oksana/exams_first/src/css/_variables.scss
+++ b/students/umienchuk_oksana/exams_first/src/css/_variables.scss
@@ -1,31 +1,32 @@
 // colors
-$orang-color: #f76707;
-$white-color: #fff;
-$gray-3-color: #dee2e6;
-$gray-6-color: #868e96;
-$grey-7-color: #495057;
-$gray-8-color: #343a40;
-$grey-light: lightgray;
-$green-color: green;
-$periwinkle-gray: #BCD0E5;
+$color-white: #FFF;
+$main-color-text: $color-white;
+$color-gray: #999;
+$second-color-text: $color-gray;
 
-$border-btn-color-primary: $orang-color;
-$border-btn-color-secondary: $periwinkle-gray;
-$border-height: 50px;
-$btn-font-weight: 600;
 
-$border-color: $grey-light;
-$default-border: 1px solid $grey-light;
-
-$default-body-color: $white-color;
+//main color for text 
+$default-body-color: $color-white;
 
 // fonts
-$default-font-name: 'Roboto';
 $fallback: Arial, Helvetica, sans-serif;
-$default-font-size: 18px;
-
+$default-font-name: Josefin Sans;
 $main-font: $default-font-name, $fallback;
+$default-font-size: 16px;
+
+
+$font-sub-font: Aleo;
 $font-path: './fonts/';
+
+// $border-btn-color-primary: $orang-color;
+// $border-btn-color-secondary: $periwinkle-gray;
+// $border-height: 50px;
+// $btn-font-weight: 600;
+
+// $border-color: $grey-light;
+// $default-border: 1px solid $grey-light;
+
+
 
 // containers
 $container-padding: 15px;
