--- a/students/savchak_marharyta/08_css/css/style.css
+++ b/students/savchak_marharyta/08_css/css/style.css
@@ -14,3 +14,26 @@ body {
     font-family: Open Sans, Arial, Helvetica, sans-serif;
     font-size: 18px;
 }
+
+section {
+    max-width: 100%;
+    margin: 0 auto;
+}
+
+li {
+    list-style-type: none;
+}
+
+p {
+    text-align: center;
+}
+
+h1 {
+    font-size: 47px;
+    font-weight: 700;
+
+}
+
+h2 {
+    text-align: center;
+}
