--- a/students/hridina_anastasiia/20_css_animation/src/css/header/_logo.scss
+++ b/students/hridina_anastasiia/20_css_animation/src/css/header/_logo.scss
@@ -8,6 +8,8 @@
     }
 
     @include media(sm) {
+        width: 50%;
+        display: block;
         justify-content: center;
         position: fixed;
         top: 50px;
