--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/_fonts.scss
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/_fonts.scss
@@ -1,7 +1,13 @@
-@include font-face('montserrat-v25-latin-regular', $_font-weight: 400, $_font-style: normal, $_font-family: $default-font-name);
-@include font-face('montserrat-v25-latin-300', $_font-weight: 300, $_font-style: normal, $_font-family: $default-font-name);
-@include font-face('montserrat-v25-latin-500', $_font-weight: 500, $_font-style: normal, $_font-family: $default-font-name);
-@include font-face('montserrat-v25-latin-600', $_font-weight: 600, $_font-style: normal, $_font-family: $default-font-name);
-@include font-face('montserrat-v25-latin-700', $_font-weight: 700, $_font-style: normal, $_font-family: $default-font-name);
-@include font-face('work-sans-v18-latin-regular', $_font-weight: 400, $_font-style: normal, $_font-family: $title-font-name);
-@include font-face('work-sans-v18-latin-700', $_font-weight: 700, $_font-style: normal, $_font-family: $title-font-name);
+// @include font-face('montserrat-v25-latin-regular', $_font-weight: 400, $_font-style: normal, $_font-family: $default-font-name);
+// @include font-face('montserrat-v25-latin-300', $_font-weight: 300, $_font-style: normal, $_font-family: $default-font-name);
+// @include font-face('montserrat-v25-latin-500', $_font-weight: 500, $_font-style: normal, $_font-family: $default-font-name);
+// @include font-face('montserrat-v25-latin-600', $_font-weight: 600, $_font-style: normal, $_font-family: $default-font-name);
+// @include font-face('montserrat-v25-latin-700', $_font-weight: 700, $_font-style: normal, $_font-family: $default-font-name);
+// @include font-face('work-sans-v18-latin-regular', $_font-weight: 400, $_font-style: normal, $_font-family: $title-font-name);
+// @include font-face('work-sans-v18-latin-700', $_font-weight: 700, $_font-style: normal, $_font-family: $title-font-name);
+
+
+@include font-face('josefin-sans-v26-latin-regular', $_font-weight: 400, $_font-style: normal, $_font-family: $default-font-name);
+@include font-face('josefin-sans-v26-latin-300', $_font-weight: 300, $_font-style: normal, $_font-family: $default-font-name);
+@include font-face('josefin-sans-v26-latin-700', $_font-weight: 700, $_font-style: normal, $_font-family: $default-font-name);
+@include font-face('aleo-v12-latin-regular', $_font-weight: 400, $_font-style: normal, $_font-family: $title-font-name);
