--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/_global.scss
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/_global.scss
@@ -18,6 +18,6 @@ body {
     }
 }
 
-.title {
-    @include font-family(700, 36px, #000, 160%, normal, $title-font, normal);
-}
+// .title {
+//     @include font-family(700, 36px, #000, 160%, normal, $title-font, normal);
+// }
