--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_buttons.scss
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_buttons.scss
@@ -1,5 +1,5 @@
 .btn {
-    @include font-family(500, 16px, $color-darkblue, 160%, 0.08px, $main-font, normal);
+    @include font-family(500, 16px, $color-blue, 160%, 0.08px, $main-font, normal);
     text-decoration: none;
     @extend %flex-jcc-aic;
     width: 210px;
@@ -10,22 +10,22 @@
 }
 
 .btn-violet {
-    background-color: $color-medium-purple;
+    background-color: $color-blue;
     color: $color-white;
 
     &:hover {
-        background-color: $color-electric-violet;
-        background-color: $color-electric-violet;
+        background-color: $color-blue;
+        background-color: $color-blue;
     }
 }
 
 .btn-pink {
     color: $color-white;
-    border: 1px solid $color-brilliant-rose;
-    background-color: $color-brilliant-rose;
+    border: 1px solid $color-blue;
+    background-color: $color-blue;
 
     &:hover {
-        background-color: $color-pink-middle;
-        background-color: $color-pink-middle;
+        background-color: $color-blue;
+        background-color: $color-blue;
     }
 }
