--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_main.scss
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_main.scss
@@ -1,6 +1,8 @@
 @import "./hero-block";
-@import "./storage-bank";
-@import "./features";
-@import "./testimonials";
-@import "./try-free";
+@import "./menu";
+@import "./why-choose";
+@import "./steps";
+@import "./house-spain";
+@import "./mounain-spain";
+@import "./what-say";
 @import "./buttons";
