--- a/students/kukuruza_maxim/11_flex/css/style.css
+++ b/students/kukuruza_maxim/11_flex/css/style.css
@@ -1,5 +1,6 @@
 body {
-    font-family: Montserrat;
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 20px;
     font-style: normal;
     line-height: 26px;
@@ -9,7 +10,7 @@ body {
 button {
     color: #FFF;
     text-align: center;
-    font-family: Poppins;
+    font-family: 'Poppins';
     font-size: 16px;
     font-style: normal;
     font-weight: 700;
