--- a/students/kukuruza_maxim/08_css/css/style.css
+++ b/students/kukuruza_maxim/08_css/css/style.css
@@ -1,11 +1,6 @@
-* {
-    transition: all .1s ease-in;
-}
-
 /* Header */
 header {
-    width: 940px;
-    margin: auto;
+    margin-top: -100px;
 }
 
 nav {
@@ -13,8 +8,6 @@ nav {
     box-shadow: 0px 5px 4px -3px rgba(0, 0, 0, 0.25);
     border-bottom: 2px solid #828282;
 }
-
-
 
 ul {
     list-style: none;
