--- a/students/kukuruza_maxim/09_css/css/style.css
+++ b/students/kukuruza_maxim/09_css/css/style.css
@@ -1,11 +1,10 @@
-* {
-    transition: all .1s ease-in;
+body {
+    font-size: 14px;
 }
 
 /* Header */
 header {
-    width: 940px;
-    margin: auto;
+    margin-top: -100px;
 }
 
 nav {
@@ -13,8 +12,6 @@ nav {
     box-shadow: 0px 5px 4px -3px rgba(0, 0, 0, 0.25);
     border-bottom: 2px solid #828282;
 }
-
-
 
 ul {
     list-style: none;
@@ -109,27 +106,19 @@ p {
 .description {
     color: #070707;
     width: 480px;
-
     margin: auto;
 }
 
 .container {
     font-weight: bold;
-    font-size: 14px;
     color: #828282;
-
     display: inline-block;
     padding: 28px;
-}
-
-.container p {
-    font-size: 14px;
 }
 
 .stars {
     margin-top: 40px;
     display: inline-block;
-
 }
 
 .stars img {
@@ -137,15 +126,12 @@ p {
 }
 
 .programs {
-
     margin-top: 40px;
 }
 
 .portfolio {
     background-color: #f6f6f6;
-
 }
-
 
 .portfolio h2 {
     padding-bottom: 50px;
@@ -159,7 +145,6 @@ p {
 footer {
     height: 670px;
 }
-
 
 button {
     margin: 0 auto;
