fixed due to pixel perfect

--- a/students/kukuruza_maxim/14_mix/src/css/_productly.scss
+++ b/students/kukuruza_maxim/14_mix/src/css/_productly.scss
@@ -42,40 +42,65 @@
 main {
     display: flex;
     flex-direction: column;
-    gap: 100px;
+    gap: 65px;
 }
 
-.hero-text {
-    padding: 97px 0px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
 
-    h1 {
+
+.hero {
+    margin-top: 55px;
+
+    &-text {
+        padding: 90px 50px 90px 0px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    &-title {
+        font-weight: 700;
+        line-height: 54px;
         font-size: 44px;
     }
 
-    .hero-desc {
+    &-desc {
         font-size: $secondary-fonts-size;
+        font-weight: 400;
+        line-height: 28px;
+    }
+
+    &-image {
+        width: 644px;
+        height: 495px;
     }
 }
+
+
+
+
 
 .features {
     background-image: url(../images/bg.svg);
     background-size: 100vw 100%;
+
+    .cards {
+        gap: 40px;
+    }
 
     .features-title {
         font-size: 36px;
         font-weight: 700;
         margin: auto;
         text-align: center;
-        padding-bottom: 50px;
+        padding-bottom: 60px;
     }
 
     a {
-        margin: 70px auto;
+        margin: 100px auto;
     }
 }
+
+.cards {}
 
 .card {
     gap: 20px;
@@ -86,58 +111,74 @@ main {
         height: 50px;
     }
 
-    .card-title {
+    &-title {
         font-weight: 600;
         font-size: 22px;
     }
 
-    .card-desc {
+    &-desc {
         font-size: $main-font-size;
     }
 }
 
-section {
-    .title {
-        font-size: 36px;
-        margin-bottom: 20px;
+
+.text__wrapper {
+    padding: 10px 110px 0px 0px;
+
+    &-right {
+        padding: 45px 0px 0px 120px;
+
+    }
+}
+
+.title {
+    font-size: 36px;
+    line-height: 162.5%;
+    margin-bottom: 20px;
+}
+
+.desc {
+    font-size: $main-font-size;
+    font-weight: 500;
+    color: $dark-brown;
+    line-height: 162.5%;
+
+    // .desc-list
+
+    &-list {
+        margin-top: 40px;
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
     }
 
-    .desc {
-        font-size: $main-font-size;
-        font-weight: 500;
-        color: $dark-brown;
+    // .desc-list__items
+
+    &-list__items {
+        // display: flex;
+        // gap: 30px;
+        // align-items: center;
     }
 
-    .desc-title {
-        font-size: $main-font-size;
-        font-weight: 700;
-    }
-
-    .desc-list__items-checkbox {
+    &-list__items-checkbox {
         display: flex;
         gap: 30px;
         align-items: center;
     }
 
-    .desc-list {
-        margin-top: 40px;
-        display: flex;
-        flex-direction: column;
-        gap: 30px;
+    // .desc-title
 
-        .desc-title {
-            margin-bottom: 10px;
-        }
+    &-title {
+        margin-bottom: 20px;
+        font-size: $main-font-size;
+        font-weight: 700;
     }
 }
 
-.col-6 {
-    justify-content: center;
-}
 
 // footer 
 footer {
-    margin-top: 100px;
+    margin-top: 150px;
 }
 
 .footer-links {
