--- a/students/umienchuk_oksana/exams_first/src/css/style.scss
+++ b/students/umienchuk_oksana/exams_first/src/css/style.scss
@@ -4,4 +4,10 @@
 @import "./mixins";
 @import "./reset";
 @import "./global";
-@import "./form";
+@import "./form-search/form-search";
+@import "./header/header";
+@import "./block-why/block-why";
+@import "./steps/steps";
+@import "./content/content";
+@import "./review/review";
+@import "./footer/footer";
