--- a/students/tiselko_iryna/exam_module1/src/css/main/_grandspain2.scss
+++ b/students/tiselko_iryna/exam_module1/src/css/main/_grandspain2.scss
@@ -1,5 +1,5 @@
 .grandspain2 {
-    background-image: url(../../images/GrandSpain_2.png);
+    background-image: url(../../images/grandspain_2.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
