--- a/students/tiselko_iryna/exam_module1/src/css/_form.scss
+++ b/students/tiselko_iryna/exam_module1/src/css/_form.scss
@@ -11,6 +11,7 @@
     font-weight: $btn-font-weight;
     line-height: $btn-line-height;
     letter-spacing: $btn-letter-spacing;
+
     text-transform: uppercase;
     text-decoration: none;
 
@@ -30,7 +31,7 @@
     }
 
     &-secondary {
-        padding: 16px 24px;
+        width: 139px;
         height: 52px;
         background-color: $btn-bg;
         color: $btn-text-color;
