--- a/students/tiselko_iryna/exam_module1/src/css/_variables.scss
+++ b/students/tiselko_iryna/exam_module1/src/css/_variables.scss
@@ -7,6 +7,7 @@ $periwinkle-gray-color: #BCD0E5;
 $gray-3-color: #dee2e6;
 $gray-6-color: #868e96;
 $dark-gray: #333;
+$gray-color: #999;
 $brown-color: #565656;
 $subtitle-content-color: #7B7B7B;
 $dodger-blue: #5373FD;
