--- a/students/tiselko_iryna/exam_module1/src/css/header/_menu.scss
+++ b/students/tiselko_iryna/exam_module1/src/css/header/_menu.scss
@@ -4,7 +4,22 @@
     letter-spacing: 2.4px;
     text-transform: uppercase;
     color: $white-color;
-    text-align: center;
+}
+
+.header {
+
+
+    // .header__logo
+    &__logo {
+        display: flex;
+        align-items: center;
+    }
+
+    // .header__navblock
+
+    &__navblock {
+        background-color: $dodger-blue;
+    }
 }
 
 .navblock {
@@ -15,7 +30,11 @@
 
     // .navblock__menu
 
-    &__menu {}
+    &__menu {
+        display: flex;
+        justify-content: flex-end;
+        gap: 40px;
+    }
 }
 
 .menu {
@@ -26,5 +45,22 @@
 
     // .menu__link
 
-    &__link {}
+    &__link {
+        display: inline-block;
+        font-family: $secondary-font;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 20px;
+        letter-spacing: 1.4px;
+        text-transform: uppercase;
+        text-decoration: none;
+        color: $white-color;
+        padding: 10px;
+
+
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
 }
