--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/_variables.scss
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/_variables.scss
@@ -11,12 +11,12 @@ $color-light-gray: #999999;
 $default-font-color: $color-darkgray;
 
 $default-box-shadow: 0px 5px 5px 0px rgba(75, 93, 104, 0.10);
-$border-btn-color-primary: $color-blue;
+$border-btn-color-primary: $color-white;
 $border-height: 50px;
 $btn-font-weight: 600;
 
 $border-color: $color-blue;
-$default-border: 1px solid $border-btn-color-primary;
+$default-border: none;
 
 $default-body-color: $color-white;
 
