--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_buttons.scss
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_buttons.scss
@@ -1,16 +1,19 @@
 .btn {
-    @include font-family(500, 16px, $color-blue, 160%, 0.08px, $main-font, normal);
+    @include font-family(400, 16px, $color-blue-accent, 20px, 1.12px, $title-font-name, normal);
     text-decoration: none;
     @extend %flex-jcc-aic;
-    width: 210px;
+    width: 213px;
     height: 60px;
+
     border: $default-border;
-    border-radius: 50px;
-    box-shadow: $default-box-shadow;
+    background-image: url(../../images/rectangle.svg);
+    background-repeat: no-repeat;
+    text-transform: uppercase;
+    background-color: $color-blue-accent;
 }
 
-.btn-violet {
-    background-color: $color-blue;
+.btn-blue {
+    background-color: $color-blue-accent;
     color: $color-white;
 
     &:hover {
