--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_hero-block.scss
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_hero-block.scss
@@ -66,7 +66,7 @@
     background-color: $color-blue-accent;
     width: 140px;
     height: 52px;
-    top: 5px;
+    top: 4px;
     right: 5px;
     border: none;
 
@@ -85,6 +85,7 @@
         letter-spacing: 1.4px;
         text-transform: uppercase;
         padding-left: 12px;
+        padding-top: 2px;
     }
 }
 
