--- a/students/tiselko_iryna/exam_module1/src/css/main/_grandspain1.scss
+++ b/students/tiselko_iryna/exam_module1/src/css/main/_grandspain1.scss
@@ -3,6 +3,10 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+
+    @include media (md) {
+        background-position-x: 45%;
+    }
 }
 
 .grandspain {
