--- a/students/tiselko_iryna/exam_module1/src/css/main/_touristssay.scss
+++ b/students/tiselko_iryna/exam_module1/src/css/main/_touristssay.scss
@@ -3,40 +3,82 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+
+    @include media () {
+        background-position: 25% 75%;
+    }
+
     // .touristssay__title
 
     &__title {
         text-align: center;
         margin-top: 120px;
         padding-bottom: 60px;
+
+        @include media (xs) {
+            font-size: 26px;
+            letter-spacing: 1.6px;
+        }
     }
 
     // .touristssay__item
 
     &__item {
         display: flex;
-        width: 1320px;
+        align-items: center;
         background-color: $dark-gray;
         margin-bottom: 180px;
+
+        @include media (md) {
+            flex-direction: column;
+            background-color: $dark-gray-opacity;
+        }
     }
 
     // .touristssay__img
 
     &__img {
-        width: 440px;
-        height: 280px;
+        display: block;
+        aspect-ratio: 3/2;
+        object-fit: cover;
+        object-position: center;
+
+        @include media (md) {
+            padding-top: 20px;
+            padding-bottom: 20px;
+        }
+
+        @include media (xxs) {
+            width: 300px;
+        }
     }
 
     // .touristssay__wrapper
 
     &__wrapper {
         padding-left: 60px;
+
+        @include media (md) {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
     }
 
     // .touristssay__subtitle
 
     &__subtitle {
         padding-top: 48px;
+
+        @include media (md) {
+            padding-top: 20px;
+        }
+
+        @include media (xs) {
+            font-size: 18px;
+            letter-spacing: 0.6px;
+        }
     }
 
     // .touristssay__text
@@ -44,6 +86,15 @@
     &__text {
         padding: 16px 65px 48px 0;
         color: $white-color;
+
+        @include media (lg) {
+            padding-right: 40px;
+        }
+
+        @include media (xs) {
+            font-size: 14px;
+            letter-spacing: 0.6px;
+        }
     }
 }
 
@@ -53,10 +104,3 @@
     fill: $dodger-blue;
     padding-right: 5px;
 }
-
-
-// .container {}
-
-// .row {}
-
-// .col-12 {}
