--- a/students/umienchuk_oksana/exams_first/src/css/_global.scss
+++ b/students/umienchuk_oksana/exams_first/src/css/_global.scss
@@ -7,6 +7,7 @@ body {
     font-family: $main-font;
     background-color: $default-body-color;
     font-size: $default-font-size;
+    color: $default-body-color;
 }
 
 @include grid();
