--- a/students/umienchuk_oksana/exams_first/src/css/_variables.scss
+++ b/students/umienchuk_oksana/exams_first/src/css/_variables.scss
@@ -3,7 +3,10 @@ $color-white: #FFF;
 $main-color-text: $color-white;
 $color-gray: #999;
 $second-color-text: $color-gray;
-
+$dark-grey: #333;
+$accent: #5373FD;
+$red: #FF6363;
+$blue: #00A2FF;
 
 //main color for text 
 $default-body-color: $color-white;
@@ -16,6 +19,7 @@ $default-font-size: 16px;
 
 
 $font-sub-font: Aleo;
+$default-font-sub-font: $font-sub-font, $fallback;
 $font-path: './fonts/';
 
 // $border-btn-color-primary: $orang-color;
@@ -26,8 +30,6 @@ $font-path: './fonts/';
 // $border-color: $grey-light;
 // $default-border: 1px solid $grey-light;
 
-
-
 // containers
 $container-padding: 15px;
 $container-max-width: 1350px;
@@ -36,6 +38,11 @@ $gap: 15px;
 $defaulp-count-col: 12;
 
 $default-width: 1350px;
+
+//block steps
+$default-bg-color: $dark-grey;
+$icon-width: 64px;
+$icon-height: 64px;
 
 $breack-points: (
     "lg": 1200px,
