--- a/students/umienchuk_oksana/exams_first/src/css/steps/_steps.scss
+++ b/students/umienchuk_oksana/exams_first/src/css/steps/_steps.scss
@@ -1,26 +1,54 @@
 .steps {
+    background-color: $default-bg-color;
+    padding: 60px 0;
 
     // .steps__items
 
-    &__items {}
+    &__items {
+        list-style-type: none;
+        display: flex;
+        justify-content: space-between;
+        padding: 0;
+        align-items: center;
+    }
 
     // .steps__item
 
-    &__item {}
+    &__item {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+    }
 
     // .steps__title
 
-    &__title {}
+    &__title {
+        font-family: $default-font-sub-font;
+        font-size: 36px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 40px;
+        text-transform: capitalize;
+    }
 
     // .steps__icon
 
     &__icon {}
 }
 
-.icon-img {}
+.icon-img {
+    width: $icon-width;
+    height: $icon-height;
+}
 
-.icon-blue {}
+.icon-blue {
+    fill: $blue;
+}
 
-.icon-red {}
+.icon-red {
+    fill: $red;
+}
 
-.icon-protoss-pylon {}
+.icon-accent {
+    fill: $accent;
+}
