--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_what-say.scss
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_what-say.scss
@@ -53,6 +53,7 @@ $img-height: 280px;
         width: 20px;
         height: 20px;
         padding-bottom: 3px;
+        fill: $color-blue-accent;
     }
 
     &__description {
