--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_hero-block.scss
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_hero-block.scss
@@ -10,25 +10,10 @@
     background-size: cover;
     height: calc(100vh - 84px);
 
-    &__search {}
-}
-
-.search-wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.search {
-    text-align: center;
-    position: relative;
-
     &__title {
         text-align: center;
         margin: 0;
-        margin-top: 10vh;
-
+        margin-top: 30vh;
         color: $color-white;
         font-size: 48px;
         font-weight: 700;
@@ -43,44 +28,62 @@
         letter-spacing: 6.82px;
     }
 
+    &__search {
+        margin-top: 48px;
+    }
+}
+
+.hero-block-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.search {
+    text-align: center;
+    position: relative;
+
     &__input {
         width: 647px;
         height: 60px;
         padding: 0;
-
-        font-family: Josefin Sans;
+        font-family: $main-font;
         font-size: 14px;
         line-height: 20px;
         letter-spacing: 2.8px;
         padding-left: 36px;
         border: none;
-
     }
 }
 
 .search-button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    background-color: $color-blue-accent;
-    width: 140px;
-    height: 52px;
-    top: 4px;
-    right: 5px;
-    border: none;
+    &__button {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        background-color: $color-blue-accent;
+        width: 140px;
+        height: 52px;
+        top: 4px;
+        right: 5px;
+        border: none;
 
-
+        &:hover {
+            background-color: $color-blue;
+        }
+    }
 
     &__img {
         width: 16px;
         height: 16px;
-        fill: white;
+        fill: $color-white;
     }
 
     &__title {
         color: $color-white;
-        font-family: Aleo;
+        font-family: $title-font;
         font-size: 14px;
         letter-spacing: 1.4px;
         text-transform: uppercase;
@@ -89,22 +92,27 @@
     }
 }
 
-.scroll-down-block {
+.hero-block {
+    &___scroll-down {}
+}
+
+.scroll-down {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 210px;
-}
 
-.scroll-down {
-    font-size: 14px;
-    line-height: 20px;
-    letter-spacing: 2.8px;
-    margin: 0;
-    color: $color-white;
-}
+    &__title {
+        font-size: 14px;
+        line-height: 20px;
+        letter-spacing: 2.8px;
+        margin: 0;
+        color: $color-white;
+    }
 
-.chevron-down {
-    width: 14px;
-    fill: $color-white;
+    &__img {
+        width: 14px;
+        height: 16px;
+        fill: $color-white;
+    }
 }
