--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_steps.scss
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_steps.scss
@@ -9,8 +9,20 @@
         // padding-right: 300px;
         max-height: 306px;
         height: 100%;
-
         justify-content: space-between;
+        padding: 60px 0;
+
+        & .step-item:nth-child(1) {
+            fill: $color-blue-accent;
+        }
+
+        & .step-item:nth-child(2) {
+            fill: $color-light-red;
+        }
+
+        & .step-item:nth-child(3) {
+            fill: $color-blue;
+        }
     }
 }
 
@@ -30,34 +42,28 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        width: 424px;
-        // width: 100%;
+        max-width: 424px;
+        width: 100%;
 
         padding-left: 24px;
-        ///?????
 
         &:first-child {
             padding-left: 0px;
         }
 
-        &::after {
-            position: absolute;
-            left: 200px;
-
-
-            content: '';
-            width: 300px;
-            height: 300px;
-            border-radius: 50%;
-            border-top: 2px solid black;
-
-        }
+        // &::after {
+        //     position: absolute;
+        //     left: 200px;
+        //     content: '';
+        //     width: 300px;
+        //     height: 300px;
+        //     border-radius: 50%;
+        //     border-top: 2px solid black;
+        // }
     }
 }
 
 .step-item {
-
-
 
 
     &__img {
@@ -75,6 +81,8 @@
         line-height: 40px;
         /* 111.111% */
         text-transform: capitalize;
+        margin: 0;
+        padding-top: 20px;
 
 
     }
